Revision history for Net-Checkpoint-Management-v1: {{ $dist->version }}

{{ $NEXT }}
    - the module is now developed and tested against version R81.20
    - add API key login support
      since Checkpoint R80.40, API version 1.6
    - make user and passwd attributes read-only

0.003000  2023-01-10 19:04:01+01:00 Europe/Vienna
    - add where_used method

0.002000  2022-11-25 11:36:20+01:00 Europe/Vienna
    - add dns_domain methods
    - add address_range methods

0.001010  2022-05-30 15:34:46+02:00 Europe/Vienna
    - fix api_versions successful test
      for three digit API version numbers introduced by jumbo hotfixes

0.001009  2021-03-22 11:59:27+01:00 Europe/Vienna
    - improve error handling of underlying exceptions
      like 'Could not connect to'

0.001008  2020-09-22 18:00:28+02:00 Europe/Vienna
    - fix 'Use of uninitialized value in string eq' warning
    - fix optional parameters of install_policy to be really optional

0.001007  2020-09-14 12:30:08+02:00 Europe/Vienna
    - add install_policy method
    - add verify_policy method
    - add wait_for_task method

0.001006  2020-07-21 10:19:37+02:00 Europe/Vienna
    - add group methods

0.001005  2020-04-23 19:39:32+02:00 Europe/Vienna
    - improve exceptions for responses which contain the error message in a
      key named 'errors' or 'warnings' in addition to 'blocking-errors'
    - add task methods
    - fix api.t failures because of existing DNS objects

0.001004  2020-01-22 14:30:27+01:00 Europe/Vienna
    - fix error handling of responses which contain the error message in a key
      named 'message' instead of 'errors'
    - use 'blocking-errors' instead of 'errors' from responses for exceptions
    - fix Data::Dumper::Concise usage without declaring it as a dependency
    - fix update with multiple id parameters
      uid will be preferred over name and rule-number
    - add access_roles methods

0.001003  2019-07-09 15:48:51+02:00 Europe/Vienna