@@ -5,6 +5,8 @@ Revision history for Net-Checkpoint-Management-v1: {{ $dist->version }}
     - add API key login support
       since Checkpoint R80.40, API version 1.6
     - make user and passwd attributes read-only
+    - add support for passing optional parameters to the login method
+      like read-only or domain
 
 0.003000  2023-01-10 19:04:01+01:00 Europe/Vienna
     - add where_used method
